@@ -12,6 +12,7 @@ import com.food.ordering.system.restaurant.service.domain.event.OrderRejectedEve
 import org.springframework.stereotype.Component;
 
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class RestaurantMessagingDataMapper {
@@ -53,12 +54,13 @@ public class RestaurantMessagingDataMapper {
                 .orderId(restaurantApprovalRequestAvroModel.getOrderId())
                 .restaurantOrderStatus(RestaurantOrderStatus.valueOf(restaurantApprovalRequestAvroModel
                         .getRestaurantOrderStatus().name()))
-                .products(restaurantApprovalRequestAvroModel.getProducts().stream()
-                        .map(avroModel -> Product.Builder.builder()
-                                .productId(new ProductId(UUID.fromString(avroModel.getId())))
-                                .quantity(avroModel.getQuantity())
-                                .build())
-                        .toList())
+                .products(restaurantApprovalRequestAvroModel.getProducts()
+                        .stream().map(avroModel ->
+                                Product.Builder.builder()
+                                        .productId(new ProductId(UUID.fromString(avroModel.getId())))
+                                        .quantity(avroModel.getQuantity())
+                                        .build())
+                        .collect(Collectors.toList()))
                 .price(restaurantApprovalRequestAvroModel.getPrice())
                 .createdAt(restaurantApprovalRequestAvroModel.getCreatedAt())
                 .build();
